--- a/Theo/Exploration/comparaison.ipynb
+++ b/Theo/Exploration/comparaison.ipynb
@@ -1,59 +1,74 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# A faire tourner que si vous n'avez pas déjà installé les packages nécessaires\n",
-    "!pip install gensim==3.8.3\n",
-    "!pip install unidecode\n",
-    "!pip install torch\n",
-    "!pip install sentencepiece\n",
-    "!pip install transformers\n",
-    "!pip install bs4\n",
-    "!pip install networkx"
-   ]
+    "# Notebook plus élaboré pour l'élaboration des métriques et de la comparaison des modèles\r\n",
+    "\r\n",
+    "Malheureusement, une grande partie de ce NB a été perdu à cause d'une fausse manip' git...\r\n",
+    "Un autre fichier .py sera utilisable et plus concis."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from joblib.parallel import cpu_count\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import pickle\n",
-    "import time\n",
-    "import functools\n",
-    "import operator\n",
-    "from joblib import Parallel,delayed\n",
-    "from functools import partial\n",
-    "import sentencepiece as spm \n",
-    "import psutil\n",
-    "from tqdm import tqdm\n",
-    "import pickle\n",
-    "import os\n",
-    "import re\n",
-    "from transformers.utils.dummy_pt_objects import CamembertModel\n",
-    "from transformers.utils.dummy_sentencepiece_objects import CamembertTokenizer\n",
-    "from unidecode import unidecode\n",
-    "from bs4 import BeautifulSoup\n",
-    "import gensim\n",
-    "import sys\n",
-    "import gc\n",
+    "# A faire tourner que si vous n'avez pas déjà installé les packages nécessaires\r\n",
+    "!pip install gensim==3.8.3\r\n",
+    "!pip install unidecode\r\n",
+    "!pip install torch\r\n",
+    "!pip install sentencepiece\r\n",
+    "!pip install transformers\r\n",
+    "!pip install bs4\r\n",
+    "!pip install networkx"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from joblib.parallel import cpu_count\r\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "import torch\r\n",
+    "import pickle\r\n",
+    "import time\r\n",
+    "import functools\r\n",
+    "import operator\r\n",
+    "from joblib import Parallel,delayed\r\n",
+    "from functools import partial\r\n",
+    "import sentencepiece as spm \r\n",
+    "import psutil\r\n",
+    "from tqdm import tqdm\r\n",
+    "import pickle\r\n",
+    "import os\r\n",
+    "import re\r\n",
+    "from transformers.utils.dummy_pt_objects import CamembertModel\r\n",
+    "from transformers.utils.dummy_sentencepiece_objects import CamembertTokenizer\r\n",
+    "from unidecode import unidecode\r\n",
+    "from bs4 import BeautifulSoup\r\n",
+    "import gensim\r\n",
+    "import sys\r\n",
+    "import gc\r\n",
     "import fats"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "source": [
+    "N=[f for f in os.listdir() if (f.split('.')[-1]=='pickle') and ('sortie' in f)]\r\n",
+    "N=N[1:]\r\n",
+    "N"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Net_sortie_3.pickle',\n",
@@ -67,42 +82,44 @@
        " 'Multi_sortie_finale.pickle']"
       ]
      },
-     "execution_count": 98,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 98
     }
    ],
-   "source": [
-    "N=[f for f in os.listdir() if (f.split('.')[-1]=='pickle') and ('sortie' in f)]\n",
-    "N=N[1:]\n",
-    "N"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "index_2=pickle.load(open('index_2.pickle','rb'))\n",
-    "trace=pickle.load(open('trace_test.pickle','rb'))\n",
-    "score=pickle.load(open('score.pickle','rb'))\n",
-    "score=[score[i] for i in index_2]\n",
-    "assert len(score)==len(trace)\n",
-    "s=Parallel(5)(delayed(fats.make_new_paragraphes)(i,j) for i,j in zip(score,trace))\n",
-    "s=functools.reduce(operator.iconcat,s,[])\n",
-    "P=pickle.load(open('Paragraphes_.pickle','rb'))\n",
+    "index_2=pickle.load(open('index_2.pickle','rb'))\r\n",
+    "trace=pickle.load(open('trace_test.pickle','rb'))\r\n",
+    "score=pickle.load(open('score.pickle','rb'))\r\n",
+    "score=[score[i] for i in index_2]\r\n",
+    "assert len(score)==len(trace)\r\n",
+    "s=Parallel(5)(delayed(fats.make_new_paragraphes)(i,j) for i,j in zip(score,trace))\r\n",
+    "s=functools.reduce(operator.iconcat,s,[])\r\n",
+    "P=pickle.load(open('Paragraphes_.pickle','rb'))\r\n",
     "assert len(P)==len(s)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "source": [
+    "for n in N:\r\n",
+    "    SMHA=pickle.load(open(n,'rb'))\r\n",
+    "    try:\r\n",
+    "        Parallel(5)(delayed(fats.make_new_sortie)(i,j) for i,j in zip(s,SMHA))\r\n",
+    "    except:\r\n",
+    "        print(n)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "L3_sortie_.pickle\n",
       "Net_sortie_3.pickle\n",
@@ -112,62 +129,59 @@
      ]
     }
    ],
-   "source": [
-    "for n in N:\n",
-    "    SMHA=pickle.load(open(n,'rb'))\n",
-    "    try:\n",
-    "        Parallel(5)(delayed(fats.make_new_sortie)(i,j) for i,j in zip(s,SMHA))\n",
-    "    except:\n",
-    "        print(n)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "source": [
+    "np.mean([len(i) for i in s])/2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9.714294718265473"
       ]
      },
-     "execution_count": 84,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 84
     }
    ],
-   "source": [
-    "np.mean([len(i) for i in s])/2"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "source": [
+    "BSR=pickle.load(open('BSR_sortie.pickle','rb'))\r\n",
+    "np.sum([1 for i in range(len(s)) if len(s[i])!=len(BSR[i])])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "22152"
       ]
      },
-     "execution_count": 82,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 82
     }
    ],
-   "source": [
-    "BSR=pickle.load(open('BSR_sortie.pickle','rb'))\n",
-    "np.sum([1 for i in range(len(s)) if len(s[i])!=len(BSR[i])])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "source": [
+    "sortie=pickle.load(open(N[3],'rb'))\r\n",
+    "sortie[0],s[0]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "([2, 3],\n",
@@ -175,141 +189,146 @@
        "         0.0979, 0.0958, 0.0903, 0.0905, 0.0478, 0.0964, 0.1024, 0.0928]))"
       ]
      },
-     "execution_count": 75,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 75
     }
    ],
-   "source": [
-    "sortie=pickle.load(open(N[3],'rb'))\n",
-    "sortie[0],s[0]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "source": [
+    "L3=pickle.load(open(N[0],'rb'))\r\n",
+    "l=[i for i in range(len(s)) if len(s[i])==1]\r\n",
+    "for i in l:\r\n",
+    "    L3[i]=L3[i][:1]\r\n",
+    "\r\n",
+    "    pickle.dump(L3,open('L3_sortie.pickle','wb'))\r\n",
+    "L3[l[0]]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "tensor([0])"
       ]
      },
-     "execution_count": 91,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 91
     }
    ],
-   "source": [
-    "L3=pickle.load(open(N[0],'rb'))\n",
-    "l=[i for i in range(len(s)) if len(s[i])==1]\n",
-    "for i in l:\n",
-    "    L3[i]=L3[i][:1]\n",
-    "\n",
-    "    pickle.dump(L3,open('L3_sortie.pickle','wb'))\n",
-    "L3[l[0]]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "source": [
+    "Net=pickle.load(open('Net_sortie_3.pickle','rb'))\r\n",
+    "dico=pickle.load(open('dico_comparaison.pickle','rb'))\r\n",
+    "dico.keys()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "dict_keys(['phrase', 'score', 'erreur', 'trace'])"
       ]
      },
-     "execution_count": 105,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 105
     }
    ],
-   "source": [
-    "Net=pickle.load(open('Net_sortie_3.pickle','rb'))\n",
-    "dico=pickle.load(open('dico_comparaison.pickle','rb'))\n",
-    "dico.keys()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "source": [
+    "len(dico['erreur'])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "5034"
       ]
      },
-     "execution_count": 106,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 106
     }
    ],
-   "source": [
-    "len(dico['erreur'])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "source": [
+    "np.sum([len(dico_sortie['Simple_sortie_finale'][i])==len(s[i]) for i in range(len(s))])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "23799"
       ]
      },
-     "execution_count": 118,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 118
     }
    ],
-   "source": [
-    "np.sum([len(dico_sortie['Simple_sortie_finale'][i])==len(s[i]) for i in range(len(s))])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "source": [
+    "erreur=[]\r\n",
+    "B=pickle.load(open('BSR_sortie.pickle','rb'))\r\n",
+    "BSR=[]\r\n",
+    "for i in range(len(s)):\r\n",
+    "    try:\r\n",
+    "        BSR.append(fats.make_new_sortie(s[i],B[i]))\r\n",
+    "    except:\r\n",
+    "        erreur.append(i)\r\n",
+    "erreur"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[201]"
       ]
      },
-     "execution_count": 102,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 102
     }
    ],
-   "source": [
-    "erreur=[]\n",
-    "B=pickle.load(open('BSR_sortie.pickle','rb'))\n",
-    "BSR=[]\n",
-    "for i in range(len(s)):\n",
-    "    try:\n",
-    "        BSR.append(fats.make_new_sortie(s[i],B[i]))\n",
-    "    except:\n",
-    "        erreur.append(i)\n",
-    "erreur"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "source": [
+    "dico_sortie={}\r\n",
+    "for n in N:\r\n",
+    "    sortie=pickle.load(open(n,'rb'))\r\n",
+    "    try:\r\n",
+    "        dico_sortie[n.split('.')[0]]=Parallel(5)(delayed(fats.make_new_sortie)(i,j) for i,j in zip(s,sortie))\r\n",
+    "    except:\r\n",
+    "        continue\r\n",
+    "dico_sortie.keys()"
+   ],
    "outputs": [
     {
+     "output_type": "error",
      "ename": "UnpicklingError",
      "evalue": "invalid load key, '\\x00'.",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
@@ -318,62 +337,53 @@
      ]
     }
    ],
-   "source": [
-    "dico_sortie={}\n",
-    "for n in N:\n",
-    "    sortie=pickle.load(open(n,'rb'))\n",
-    "    try:\n",
-    "        dico_sortie[n.split('.')[0]]=Parallel(5)(delayed(fats.make_new_sortie)(i,j) for i,j in zip(s,sortie))\n",
-    "    except:\n",
-    "        continue\n",
-    "dico_sortie.keys()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def comparaison(f,j=2):\n",
-    "    dico=pickle.load(open(dico,'rb'))\n",
-    "    l=[i for i in range(len(dico['score'])) if len(dico['phrase'][i])==len(dico['score'][i]) ]\n",
-    "    score_vrai=[dico['score'][i] for i in l]\n",
-    "#     fichiers=[i for i in os.listdir() if (name in i) and ('.pickle' in i)]\n",
-    "    sortie=pickle.load(open(f,'rb'))\n",
-    "    if len(sortie)==23799:\n",
-    "        simple=[sortie[i] for i in range(len(sortie)) if i not in dico['erreur']]\n",
-    "        simple2=[simple[i] for i in l]\n",
-    "        simple3=Parallel(j)(delayed(make_new_sortie)(i,j) for i,j in zip(score_vrai,simple2))\n",
-    "    \n",
-    "    assert len(simple3)==len(score_vrai)\n",
-    "        \n",
-    "    F1=F1_score()\n",
-    "    tp=[]\n",
-    "    fp=[]\n",
-    "    fn=[]\n",
-    "    p=[]\n",
-    "    r=[]\n",
-    "    f=[]\n",
-    "    \n",
-    "    for i in tqdm(range(len(simple3))):\n",
-    "        tp.append(F1.true_positive_mean(simple3[i],score_vrai[i]))\n",
-    "        fp.append(F1.false_positive_mean(simple3[i],score_vrai[i]))\n",
-    "        fn.append(F1.false_negative_mean(simple3[i],score_vrai[i]))\n",
-    "        p.append(F1.precision(simple3[i],score_vrai[i]))\n",
-    "        r.append(F1.recall(simple3[i],score_vrai[i]))\n",
-    "        f.append(F1(simple3[i],score_vrai[i]))\n",
-    "        \n",
-    "    mtp=torch.mean(torch.tensor(tp))\n",
-    "    mfp=torch.mean(torch.tensor(fp))\n",
-    "    mfn=torch.mean(torch.tensor(fn))\n",
-    "    mp=torch.mean(torch.tensor(p))\n",
-    "    mr=torch.mean(torch.tensor(r))\n",
-    "    mf=torch.mean(torch.tensor(f))\n",
-    "    resultat=[mtp,mfp,mfn,mp,mr,mf]\n",
-    "    \n",
+    "def comparaison(f,j=2):\r\n",
+    "    dico=pickle.load(open(dico,'rb'))\r\n",
+    "    l=[i for i in range(len(dico['score'])) if len(dico['phrase'][i])==len(dico['score'][i]) ]\r\n",
+    "    score_vrai=[dico['score'][i] for i in l]\r\n",
+    "#     fichiers=[i for i in os.listdir() if (name in i) and ('.pickle' in i)]\r\n",
+    "    sortie=pickle.load(open(f,'rb'))\r\n",
+    "    if len(sortie)==23799:\r\n",
+    "        simple=[sortie[i] for i in range(len(sortie)) if i not in dico['erreur']]\r\n",
+    "        simple2=[simple[i] for i in l]\r\n",
+    "        simple3=Parallel(j)(delayed(make_new_sortie)(i,j) for i,j in zip(score_vrai,simple2))\r\n",
+    "    \r\n",
+    "    assert len(simple3)==len(score_vrai)\r\n",
+    "        \r\n",
+    "    F1=F1_score()\r\n",
+    "    tp=[]\r\n",
+    "    fp=[]\r\n",
+    "    fn=[]\r\n",
+    "    p=[]\r\n",
+    "    r=[]\r\n",
+    "    f=[]\r\n",
+    "    \r\n",
+    "    for i in tqdm(range(len(simple3))):\r\n",
+    "        tp.append(F1.true_positive_mean(simple3[i],score_vrai[i]))\r\n",
+    "        fp.append(F1.false_positive_mean(simple3[i],score_vrai[i]))\r\n",
+    "        fn.append(F1.false_negative_mean(simple3[i],score_vrai[i]))\r\n",
+    "        p.append(F1.precision(simple3[i],score_vrai[i]))\r\n",
+    "        r.append(F1.recall(simple3[i],score_vrai[i]))\r\n",
+    "        f.append(F1(simple3[i],score_vrai[i]))\r\n",
+    "        \r\n",
+    "    mtp=torch.mean(torch.tensor(tp))\r\n",
+    "    mfp=torch.mean(torch.tensor(fp))\r\n",
+    "    mfn=torch.mean(torch.tensor(fn))\r\n",
+    "    mp=torch.mean(torch.tensor(p))\r\n",
+    "    mr=torch.mean(torch.tensor(r))\r\n",
+    "    mf=torch.mean(torch.tensor(f))\r\n",
+    "    resultat=[mtp,mfp,mfn,mp,mr,mf]\r\n",
+    "    \r\n",
     "    return resultat"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
