--- a/Theo/Exploration/pipeline_resume.ipynb
+++ b/Theo/Exploration/pipeline_resume.ipynb
@@ -1,158 +1,170 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Premier pipeline résumé\r\n",
+    "\r\n",
+    "vérification que chaque étape marche, donc plus détaillé, avec chaque étape de fonction"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip install gensim==3.8.3\n",
-    "!pip install unidecode\n",
-    "!pip install torch\n",
-    "!pip install sentencepiece\n",
+    "!pip install gensim==3.8.3\r\n",
+    "!pip install unidecode\r\n",
+    "!pip install torch\r\n",
+    "!pip install sentencepiece\r\n",
     "!pip install transformers==4.5.0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from joblib.parallel import cpu_count\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import pickle\n",
-    "import time\n",
-    "import functools\n",
-    "import operator\n",
-    "from joblib import Parallel,delayed\n",
-    "from functools import partial\n",
-    "import sentencepiece as spm \n",
-    "import psutil\n",
-    "from tqdm import tqdm\n",
-    "import pickle\n",
-    "import os\n",
-    "import re\n",
-    "from unidecode import unidecode\n",
-    "from bs4 import BeautifulSoup\n",
-    "import gensim\n",
-    "\n",
-    "from fats import BERTScore,TextRank,Random_summary,Lead_3,SMHA_Linear_classifier\n",
+    "from joblib.parallel import cpu_count\r\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "import torch\r\n",
+    "import pickle\r\n",
+    "import time\r\n",
+    "import functools\r\n",
+    "import operator\r\n",
+    "from joblib import Parallel,delayed\r\n",
+    "from functools import partial\r\n",
+    "import sentencepiece as spm \r\n",
+    "import psutil\r\n",
+    "from tqdm import tqdm\r\n",
+    "import pickle\r\n",
+    "import os\r\n",
+    "import re\r\n",
+    "from unidecode import unidecode\r\n",
+    "from bs4 import BeautifulSoup\r\n",
+    "import gensim\r\n",
+    "\r\n",
+    "from fats import BERTScore,TextRank,Random_summary,Lead_3,SMHA_Linear_classifier\r\n",
     "from fats import Make_Extractive,Word_Cleaning, Make_Embedding"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "base=pd.read_csv('MLSUM_fr_val.csv',sep=\";\")\n",
-    "Paragraphes= base.iloc[0,1].split('.') #introduisez ici une suite de phrases non-nettoyées dans une liste\n",
-    "\n",
-    "# Paragraphes = [ phrase1, phrase2, ..., phraseN ]\n",
+    "base=pd.read_csv('MLSUM_fr_val.csv',sep=\";\")\r\n",
+    "Paragraphes= base.iloc[0,1].split('.') #introduisez ici une suite de phrases non-nettoyées dans une liste\r\n",
+    "\r\n",
+    "# Paragraphes = [ phrase1, phrase2, ..., phraseN ]\r\n",
     "#Paragraphes"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "WC=Word_Cleaning(n_jobs=1,sentence=True,threshold=True,seuil=2,lemma=False,seuil_carac=3)\n",
-    "Paragraphes=WC.remove_empty(Paragraphes)\n",
-    "text=WC.make_documents(Paragraphes)\n",
-    "text=WC.remove_empty(text)\n",
+    "WC=Word_Cleaning(n_jobs=1,sentence=True,threshold=True,seuil=2,lemma=False,seuil_carac=3)\r\n",
+    "Paragraphes=WC.remove_empty(Paragraphes)\r\n",
+    "text=WC.make_documents(Paragraphes)\r\n",
+    "text=WC.remove_empty(text)\r\n",
     "#text"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "W2V=gensim.models.Word2Vec.load(\"W2V_all.model\")\n",
-    "\n",
-    "from transformers import CamembertTokenizer, CamembertModel, CamembertConfig\n",
-    "tok=CamembertTokenizer(\"MLSUM_tokenizer.model\")\n",
-    "\n",
-    "ME=Make_Extractive(cpu=1)\n",
-    "#sentence=ME.make_w2v_sentences(text)\n",
-    "#text=Parallel(n_jobs=cpu_max)(delayed(ME.make_splitting)(s) for s in text)\n",
-    "\n",
-    "dico=ME.make_encoding(text,tokenizer='MLSUM_tokenizer.model',voc_size=12000,split=1,training=False)\n",
-    "input_ids=dico['input']\n",
-    "att_mask=dico['mask']\n",
-    "camem=CamembertModel.from_pretrained(\"camembert-base\")\n",
-    "ME=Make_Embedding(tok,cpu=1)\n",
+    "W2V=gensim.models.Word2Vec.load(\"W2V_all.model\")\r\n",
+    "\r\n",
+    "from transformers import CamembertTokenizer, CamembertModel, CamembertConfig\r\n",
+    "tok=CamembertTokenizer(\"MLSUM_tokenizer.model\")\r\n",
+    "\r\n",
+    "ME=Make_Extractive(cpu=1)\r\n",
+    "#sentence=ME.make_w2v_sentences(text)\r\n",
+    "#text=Parallel(n_jobs=cpu_max)(delayed(ME.make_splitting)(s) for s in text)\r\n",
+    "\r\n",
+    "dico=ME.make_encoding(text,tokenizer='MLSUM_tokenizer.model',voc_size=12000,split=1,training=False)\r\n",
+    "input_ids=dico['input']\r\n",
+    "att_mask=dico['mask']\r\n",
+    "camem=CamembertModel.from_pretrained(\"camembert-base\")\r\n",
+    "ME=Make_Embedding(tok,cpu=1)\r\n",
     "embeddings=ME.emb_phrase(input_ids,att_mask,camem)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "from transformers import CamembertTokenizer, CamembertModel, CamembertConfig\r\n",
+    "tok=CamembertTokenizer(\"MLSUM_tokenizer.model\")\r\n",
+    "ME=Make_Embedding(tok,cpu=1)\r\n",
+    "\r\n",
+    "dico=ME.make_tokens(text,cpu=1)\r\n",
+    "dico.keys()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "dict_keys(['input_ids', 'attention_mask'])"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "from transformers import CamembertTokenizer, CamembertModel, CamembertConfig\n",
-    "tok=CamembertTokenizer(\"MLSUM_tokenizer.model\")\n",
-    "ME=Make_Embedding(tok,cpu=1)\n",
-    "\n",
-    "dico=ME.make_tokens(text,cpu=1)\n",
-    "dico.keys()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def emb_phrase(input_id,att_mask,cam):\n",
-    "    embedding=cam(torch.tensor(input_id).squeeze(1),torch.tensor(att_mask).squeeze(1))\n",
+    "def emb_phrase(input_id,att_mask,cam):\r\n",
+    "    embedding=cam(torch.tensor(input_id).squeeze(1),torch.tensor(att_mask).squeeze(1))\r\n",
     "    return embedding.last_hidden_state.mean(dim=0)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x=camem(torch.tensor(dico['input_ids']).squeeze(1),torch.tensor(dico['attention_mask']).squeeze(1))\n",
+    "x=camem(torch.tensor(dico['input_ids']).squeeze(1),torch.tensor(dico['attention_mask']).squeeze(1))\r\n",
     "y=x.last_hidden_state.mean(dim=0)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "y"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "emb_phrase(dico['input_ids'],dico['attention_mask'],camem)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "tensor([[ 0.0227,  0.1509,  0.0521,  ..., -0.0226,  0.0191, -0.0921],\n",
@@ -165,73 +177,70 @@
        "       grad_fn=<MeanBackward1>)"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
-   "source": [
-    "emb_phrase(dico['input_ids'],dico['attention_mask'],camem)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "nphrase=2\n",
-    "TR=TextRank(tok_path='MLSUM_tokenizer.model',cpu=1)\n",
+    "nphrase=2\r\n",
+    "TR=TextRank(tok_path='MLSUM_tokenizer.model',cpu=1)\r\n",
     "BS=BERTScore('MLSUM_tokenizer.model')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "TRB=TR.make_resume(text,'bert',k=nphrase,get_score_only=True)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "TRB"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[426, 334]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "TRB"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "TRW=TR.make_resume(text,'word2vec',W2V=W2V,k=nphrase)\n",
-    "BSR=BS.make_summary(text,k=nphrase)\n",
-    "L3=Lead_3(text,k=2)\n",
+    "TRW=TR.make_resume(text,'word2vec',W2V=W2V,k=nphrase)\r\n",
+    "BSR=BS.make_summary(text,k=nphrase)\r\n",
+    "L3=Lead_3(text,k=2)\r\n",
     "RS=Random_summary(text)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
