MAJ final resume

--- a/Theo/pipeline_final.ipynb
+++ b/Theo/pipeline_final.ipynb
@@ -69,7 +69,8 @@
     "                 tok='Model\\\\MLSUM_tokenizer.model', #le nom du tokenizer\r\n",
     "                 modele=camem, #modèle CamemBERT ou W2V selon le modèle choisi\r\n",
     "                 get_score_only=False,# est-ce qu'on veut juste le score et pas directement les phrases\r\n",
-    "                 s=True,vs=12000,sp=1,tr=False,t=True,seuil=2,lem=False,sc=3)\r\n",
+    "                 s=True,vs=12000,sp=1,tr=False,t=True,seuil=2,lem=False,sc=3,\r\n",
+    "                 weights=True,alpha=0.2,frac=0.25)\r\n",
     "print(resu) "
    ],
    "outputs": [],
