MAJ pipeline expli

--- a/Theo/pipeline_final.ipynb
+++ b/Theo/pipeline_final.ipynb
@@ -70,7 +70,11 @@
     "                 modele=camem, #modèle CamemBERT ou W2V selon le modèle choisi\r\n",
     "                 get_score_only=False,# est-ce qu'on veut juste le score et pas directement les phrases\r\n",
     "                 s=True,vs=12000,sp=1,tr=False,t=True,seuil=2,lem=False,sc=3,\r\n",
-    "                 weights=True,alpha=0.2,frac=0.25)\r\n",
+    "                 weights=True, # Pour les modèles TextRank, est-ce qu'on modifie les poids des phrases, \r\n",
+    "                 # en augmentant les phrases présentes aux extrémités ? Oui\r\n",
+    "                 alpha=0.2, # Par combien les augmente-t-on ?\r\n",
+    "                 frac=0.25) # Quelle partie de la phrase surpondèrons-nous ? frac% du début et (1-frac)% de la fin\r\n",
+    "                 \r\n",
     "print(resu) "
    ],
    "outputs": [],
