final commit pipeline résumé

--- a/Theo/pipeline_final.ipynb
+++ b/Theo/pipeline_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')\r\n",
@@ -28,8 +28,12 @@
     "tok=CamembertTokenizer('Model\\\\MLSUM_tokenizer.model')\r\n",
     "camem=CamembertModel.from_pretrained(\"camembert-base\")\r\n",
     "\r\n",
-    "import gensim\r\n",
-    "W2V=gensim.models.Word2Vec.load(\"Model\\\\W2V_all.model\")\r\n",
+    "# import gensim\r\n",
+    "# W2V=gensim.models.Word2Vec.load(\"Model\\\\W2V_all.model\")\r\n",
+    "#Malheureusement ce modèle est trop gros pour être mis sur github, nous vous invitons à demander aux auteurs\r\n",
+    "# de vous l'envoyer. Il en va également pour les modèles SMHA, Net. \r\n",
+    "# Vous pouvez néanmoins faire tourner le pipeline sur le modèle CamemBERT, en réduisant le nombre de paragraphes\r\n",
+    "# que vous donnez à la fonction, car CamemBERT est très gourmand en mémoire RAM !\r\n",
     "\r\n",
     "import fats #On importe le module contenant toutes les fonctions"
    ],
@@ -49,10 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "# Il faut que P soit une liste de listes de phrases, donc on se débrouille pour que ce soit le cas\r\n",
-    "P=pickle.load(open('Paragraphes_exemple.pickle','rb')) #Ajoutez votre propre liste, ou décommenter les suivantes (par deux) pour exemple\r\n",
+    "P=pickle.load(open('test/Paragraphes_exemple.pickle','rb')) #Ajoutez votre propre liste, ou décommenter les suivantes (par deux) pour exemple\r\n",
     "\r\n",
     "#P=pickle.load(open('Paragraphes_exemple.pickle','rb'))\r\n",
     "\r\n",
@@ -60,13 +64,13 @@
     "#P=[i.split('.') for i in P.tolist()] # à activer si on a une liste de paragraphes qui ne soit pas de type liste (array), à commenter sinon\r\n",
     "\r\n",
     "# On lance par exemple pour les 3 premiers éléments\r\n",
-    "resu,text_2=fats.Resume(texte=P,\r\n",
+    "resu,text_2=fats.Resume(texte=P[:3],\r\n",
     "                 DL=False, # True si on veut utiliser des modèles de Deep Learning, False sinon\r\n",
     "                 cpu=1, #le nombre de cpu à utiliser, préférez peu de CPU, pour la mémoire\r\n",
     "                 type_='TextRankBert', #le nom du modèle, si DL=False\r\n",
     "                 k=2, #Le nombre de phrases\r\n",
     "                 choose_model=None, #le nom du modèle de Deep Learning, le cas échéant\r\n",
-    "                 tok='Model\\\\MLSUM_tokenizer.model', #le nom du tokenizer\r\n",
+    "                 tok='MLSUM_tokenizer.model', #le nom du tokenizer\r\n",
     "                 modele=camem, #modèle CamemBERT ou W2V selon le modèle choisi\r\n",
     "                 get_score_only=False,# est-ce qu'on veut juste le score et pas directement les phrases\r\n",
     "                 s=True,vs=12000,sp=1,tr=False,t=True,seuil=2,lem=False,sc=3,\r\n",
@@ -77,7 +81,17 @@
     "                 \r\n",
     "print(resu) "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Le processing du text a pris : 0.0 minutes\n",
+      "La production des résumés a pris : 0.43 minutes\n",
+      "[['les reds mohamed salah buteur sur penalty apres min ont etouffe tottenham lors une finale anglaise flamboyante samedi juin ligue des champions decrochant madrid leur sixieme couronne continentale', 'opportunite etait belle mohamed salah sorti sur blessure apres trente minutes dernier face real transforme force face hugo lloris pour glacer les supporteurs des spurs places derriere cage'], ['les reds pour pas decouvrir ont allonge jeu outre intenable salah seuls les lateraux trent alexander arnold une frappe trop croisee andy robertson tir claque par lloris ont instille quelques frissons dans torpeur ambiante', 'origi delivre liverpool son cote tottenham est enferre passer par axe mais ses approximations techniques ont empeche avoir des situations franchement brulantes exceptes deux tirs trop enleves sissoko christian eriksen contre mal negocie par son heung min'], ['maintenu dans ses textes cette specialite nationale une jubilation savoir que ecriture offre gouter', 'etait francais developpait les consequences intellectuelles stylistiques cette filiation']]\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
